# PR_4sem

./: .gitignore  CMakeLists.txt  bmpRW.cpp  bmpRW.h  main.cpp
RWari/: RWari.cpp  RWari.h
RWbin/: RWbin.cpp  RWbin.h
RWbmp/: RWbmp.cpp  RWbmp.h
RWhaf/: RWhaf.cpp  RWhaf.h
RWrle/: RWrle.cpp  RWrle.h
forAll/: forAll.cpp  forAll.h
